<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nrupul"
            android:padding="10dp"
            android:backgroundTint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tue-22 December 2020"
                android:background="@drawable/box"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginLeft="20dp"
                android:background="@drawable/box"
                android:textColor="@color/black"
                android:padding="15dp"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/people_to_invite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prateek"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_search"
            android:backgroundTint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/prateek_sukla" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/jeff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp"
        android:orientation="vertical"
        android:background="@drawable/box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/prateek_sukla" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prateek_sukhla"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_blue_tick"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@PratSukhla"
                android:layout_marginLeft="50dp"
                android:textStyle="italic"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/jeff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jeff_bezos"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@jeffbezos"
                android:layout_marginLeft="100dp"
                android:textStyle="italic"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_people_on_slack"
        android:drawableRight="@drawable/ic_slack"
        android:textColor="@color/black"
        android:drawablePadding="5dp"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_meeting"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="70dp"/>

</LinearLayout>